added array version of Stack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_library(LinkedList STATIC linkedList/SinglyLinkedList.c
         linkedList/CircularDoublyLinkedList.c
         linkedList/DoublyLinkedLists.c
         linkedList/CircularLinkedList.c
+        stack/LinkedStack.c
         stack/Stack.c)
